# project-1

./: AddAutomaton.h  BadCommentAutomaton.cpp  BadCommentAutomaton.h  BadStringAutomaton.cpp  BadStringAutomaton.h  CMakeLists.txt  ColonDashAutomaton.h  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Header.cpp  Header.h  IdAutomaton.cpp  IdAutomaton.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QmarkAutomaton.h  QueriesAutomaton.h  Relation.cpp  Relation.h  RightParenAutomaton.h  Rule.cpp  Rule.h  (+14 more)
1-70/: lab1
lab1.dSYM/Contents/Resources/DWARF/: lab1
lab2-passoff/2-100/: input0.txt
